--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,36 @@ container {
   height: 100%;
 }
 
+select {
+    display: block;
+    font-size: 16px;
+    color: #444;
+    line-height: 1.3;
+    padding: .6em 1.4em .5em .8em;
+    width: 100px;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+      linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    background-repeat: no-repeat, repeat;
+    /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
+    background-position: right .7em top 50%, 0 0;
+    /* icon size, then gradient */
+    background-size: .65em auto, 100%;
+  }
+
+
+
 .header h1, .col h1 {
   margin: 0px;
   font-family: 'Red Hat Display', sans-serif;
@@ -174,7 +204,7 @@ container {
 }
 
 .grid-item {
-  width: 100%;
+  margin-right: 10px;
   text-align: left;
 }
 
@@ -187,9 +217,6 @@ container {
 }
 
 .grid-item p {
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
   margin: 0px;
 }
 
@@ -271,7 +298,7 @@ container {
     font-size: 16px;
     line-height: 22px;
   }
-  .header h1 {
+  .col h1 {
     font-size: 28px;
     line-height: 30px;
   }
@@ -279,6 +306,15 @@ container {
   h2 {
     font-size: 24px;
     line-height: 28px;
+  }
+
+  .col h6 {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .col p {
+    width: 50%;
   }
 
   .grid-item h3 {
@@ -289,5 +325,75 @@ container {
   .title {
     width: 60%;
     margin-right: 30px;
+  }
+  .logo-down {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 10px;
+    height: 20vw;
+  }
+
+  .logo-up {
+    grid-template-columns: repeat(2, 1fr);
+    height: 20vw;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  p {
+    font-size: 16px;
+    line-height: 18px;
+  }
+
+  .col p {
+    min-width: 240px;
+  }
+
+  .imgrow-photo {
+    height: 120px;
+  }
+
+  .imgrow-cad {
+    height: 120px;
+  }
+
+  h2 {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .grid-item h3 {
+    font-size: 16px;
+    line-height: 18px;
+  }
+
+  .title {
+    width: 60%;
+    margin-right: 30px;
+  }
+
+  .alternative-title {
+    justify-content: flex-start;
+    padding-top: 100px;
+  }
+
+  .col {
+    height: 100vh;
+  }
+
+  .logo-down {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 10px;
+    height: 120px;
+  }
+
+  .logo-up {
+    grid-template-columns: repeat(2, 1fr);
+    height: 120px;
+  }
+
+  .grid-container {
+    margin: 10px 0 30px 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
