--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,7 +210,7 @@ select {
 
 .grid-item h3 {
   font-weight: bold;
-  margin: 40px 0px 0px 0px;
+  margin: 40px 0px 10px 0px;
   font-size: 24px;
   font-family: 'Red Hat Display', sans-serif;
   line-height: 32px;
@@ -281,7 +281,7 @@ select {
   }
 
   .content {
-    padding: 120px 6vw;
+    padding: 80px 6vw;
   }
 
   .imgrow-photo {
@@ -340,7 +340,7 @@ select {
 
 @media screen and (max-width: 640px) {
   p {
-    font-size: 16px;
+    font-size: 18px !important;
     line-height: 18px;
   }
 
@@ -377,7 +377,7 @@ select {
   }
 
   .col {
-    height: 100vh;
+    height: 50vh;
   }
 
   .logo-down {
