--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,7 +255,16 @@ select {
   font-size: 24px;
   line-height: 32px;
   color: white;
+}
 
+.problem-flex {
+  display: flex;
+}
+
+video {
+  width: 60%;
+  height: 60%;
+  margin: 24px 24px 0 0;
 }
 
 @media screen and (max-width: 1070px) {
@@ -335,6 +344,15 @@ select {
   .logo-up {
     grid-template-columns: repeat(2, 1fr);
     height: 20vw;
+  }
+
+  .problem-flex {
+    display: block;
+  }
+
+  video {
+    width: 100%;
+    margin: 16px 10px 0 0;
   }
 }
 
